<resources>
    <string name="app_name">My Application002</string>
    <string name="action_settings">Settings</string>
    <string name="helio">Hello!</string>
    <string name="test001">Happy Birthday!</string>
    <string name="test002">Yours Jerry</string>
    <string name="test003">commit</string>
    <string name="tesr004">INPUT</string>
    <string name="test005">temperature</string>
    <string name="text006">values of temperature</string>
    <string name="text009">one point</string>
    <string name="text010">two points</string>
    <string name="text011">three points</string>
    <string name="text012">RESET</string>
    <string name="text013">team</string>
    <string name="Open1">OPEN ACT2</string>
    <string name="Open2">OPEN ACT3</string>
    <string name="RMB">RMB</string>
    <string name="INPUT">INPUT</string>
    <string name="DOLLAR">Dollar</string>
    <string name="EURO">Euro</string>
    <string name="POUND">Pound</string>
    <string name="SET">Set</string>
    <string name="SAVE">Save</string>
    <string name="BACK">Back</string>
    <string name="StartGame">StartGame</string>
    <string name="MyRank">RANK</string>
</resources>
